k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: hungvi/k8s-practice-client
        resources:
          limits:
            memory: "384Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
