k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: hungvi/k8s-practice-server
        resources:
          limits:
            memory: "384Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
